--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "prettier": {
-    "plugins": ["prettier-plugin-tailwindcss"]
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   },
   "scripts": {
     "dev": "vite",
@@ -16,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
